# CLI-Weather-Forecast

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  requests.cpp  requests.h
